--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/youzarsiph/drf-hf-hub/"
 
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.10"
 django = "^5.0.6"
 djangorestframework = "^3.15.1"
 drf-redesign = "^0.3.9"
