--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,9 +19,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install poetry
-          python -m poetry install
-          python -m poetry env use python
+          python -m pip install -r requirements.txt
 
       - name: Create Django project
         run: |
