--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ djangorestframework==3.15.1
 drf-redesign==0.3.9
 gunicorn==21.2.0
 huggingface-hub==0.23.4
-python-dotenv==1.0.1"
+python-dotenv==1.0.1
